--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
     <title>Document</title>
 </head>
 <body>
+    <!--
+        1. Title
+        1.Timer
+        2. Question
+        3. Answer buttons * 4
+        4. Score
+        5. Feedback paragraph
+    -->
+    <header>
+        <h1 id = "title">You're at the oscars!</h1>
+    </header>
+    <section id = "top">
+        <h2 id = "timer">Timer</h2>
+        <h2 id = "question"> Question goes here</h2>
+        <h3 id = "difficulty">Level difficulty</h3>
+    </section>
+    <section id = "middle">
+        <button id = "answerA">A</button>
+        <button id = "answerB">B</button>
+        <button id = "answerC">C</button>
+        <button id = "answerD">D</button>
+    </section>
+    <section id = "bottom">
+        <p id = "score">Score: </p>
+        <p id ="feedback">Feedback goes here</p>
+    </section>
     <script src="app.js"></script>
 </body>
 </html>
+
