added next question function + button

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <button id = "answerD">D</button>
     </section>
     <section id = "bottom">
+        <button id = "continue">Next question</button>
         <p id = "score">Score: </p>
         <p id ="feedback">Feedback goes here</p>
     </section>
