--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         5. Feedback paragraph
     -->
     <header>
-        <h1 id = "title">You're at the oscars!</h1>
+        <h1 id = "title">General Knowledge Quiz</h1>
     </header>
     <section id = "top">
-        <h2 id = "timer">Timer</h2>
+        <h2 id = "subheading">You have ten questions to answer</h2>
         <h2 id = "question"> Question goes here</h2>
         <h3 id = "difficulty">Level difficulty</h3>
     </section>
