now we'll start css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section id = "top">
         <h2 id = "subheading">You have ten questions to answer</h2>
         <h2 id = "question"> Question goes here</h2>
-        <h3 id = "difficulty">Level difficulty</h3>
+        <h3 id = "difficulty">Question number: 1</h3>
     </section>
     <section id = "middle">
         <button id = "answerA">A</button>
