--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>General Knowledge Quiz</title>
 </head>
 <body>
     <!--
@@ -19,9 +20,10 @@
         <h1 id = "title">General Knowledge Quiz</h1>
     </header>
     <section id = "top">
-        <h2 id = "subheading">You have ten questions to answer</h2>
-        <h2 id = "question"> Question goes here</h2>
+        <h3 id = "subheading">You have five questions to answer</h3>
         <h3 id = "difficulty">Question number: 1</h3>
+        <h2 id = "question"> </h2>
+        
     </section>
     <section id = "middle">
         <button id = "answerA">A</button>
@@ -32,7 +34,7 @@
     <section id = "bottom">
         <button id = "continue">Next question</button>
         <p id = "score">Score: </p>
-        <p id ="feedback">Feedback goes here</p>
+        <p id ="feedback"></p>
     </section>
     <script src="app.js"></script>
 </body>
